--- a/Ayush/blog.html
+++ b/Ayush/blog.html
@@ -57,7 +57,7 @@
                 
                     <div class="facilites-col">
                     <img src="domenico-loia-hGV2TfOh0ns-unsplash.jpg">
-                    <a href="https://kumarayush0104.github.io/amazon-clone/"><h3>Project 3</h3></a>
+                    <a href="https://kumarayush0104.github.io/Amazon-Clone/"><h3>Project 3</h3></a>
                     <p>Created my third project clone of Amazon</p>
                     </div>
 
